// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CurrentBatch > renders correctly 1`] = `
"<div class="d-flex align-start flex-column full-width" aria-describedby="v-tooltip-v-0">
  <header-label-value-row-stub label="Order" large="false" labelclass="" valueclass=" text-truncate" class="" value="test-123"></header-label-value-row-stub>
  <header-label-value-row-stub label="Product" large="false" labelclass="" valueclass=" text-truncate" class="" value="undefined undefined"></header-label-value-row-stub>
  <batch-progress-row-stub large="false" showflagicon="false" expanded="false" progresstype="bar" valueclass="" class=""></batch-progress-row-stub>
  <header-label-value-row-stub label="Estimated time" large="false" labelclass="text-truncate" valueclass=" d-flex align-center" value="">
    <div class="mr-1 text-no-wrap">16m 10s</div>
    <evocon-v-tooltip-wrap-stub location="top" opendelay="500" text="Learn more"></evocon-v-tooltip-wrap-stub>
  </header-label-value-row-stub>
</div>
<teleport-stub disabled="false" to="[object HTMLDivElement]">[object Object]</teleport-stub>"
`;

exports[`CurrentBatch > renders correctly without estimated time and production order 1`] = `
"<div class="d-flex align-start flex-column full-width" aria-describedby="v-tooltip-v-0">
  <!--v-if-->
  <header-label-value-row-stub label="Product" large="false" labelclass="" valueclass=" text-truncate" class="" value="undefined undefined"></header-label-value-row-stub>
  <batch-progress-row-stub large="false" showflagicon="false" expanded="false" progresstype="bar" valueclass="" class=""></batch-progress-row-stub>
  <!--v-if-->
</div>
<teleport-stub disabled="false" to="[object HTMLDivElement]">[object Object]</teleport-stub>"
`;
